--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
     <title>
-        筆記首頁:
+        筆記:
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
@@ -33,19 +33,7 @@
 <body>
     <div id="doc" class="markdown-body container-fluid comment-enabled" data-hard-breaks="true"><h6 id="tags-首頁" data-id="tags-首頁"><a class="anchor hidden-xs" href="#tags-首頁" title="tags-首頁"><span class="octicon octicon-link"></span></a><span>tags: 首頁:</span></h6><h1 id="首頁" data-id="首頁"><a class="anchor hidden-xs" href="#首頁" title="首頁"><span class="octicon octicon-link"></span></a>首頁</h1><blockquote>
 <p><small><i class="fa fa-user"></i> 羅 世 勇</small></p>
-</blockquote><h1 id="python函式庫" data-id="python函式庫"><a class="anchor hidden-xs" href="#python函式庫" title="python函式庫"><span class="octicon octicon-link"></span></a><span>python:函式庫:</span></h1><blockquote>
-<ul>
-<li>
-<h2 id="OPENCV_電腦視覺庫" data-id="OPENCV_電腦視覺庫"><a class="anchor hidden-xs" href="#OPENCV_電腦視覺庫" title="OPENCV_電腦視覺庫"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/" rel="noopener" target="_blank"><span>OPENCV_電腦視覺庫:</span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/" rel="noopener" target="_blank"><img src="https://i.imgur.com/inHm6X1.png" alt="" loading="lazy"></a></h2>
-</li>
-</ul>
-</blockquote><blockquote>
-<ul>
-<li>
-<h2 id="pytube_youtube影片下載用" data-id="pytube_youtube影片下載用"><a class="anchor hidden-xs" href="#pytube_youtube影片下載用" title="pytube_youtube影片下載用"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/" rel="noopener" target="_blank"><span>pytube_youtube影片下載用:</span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/" rel="noopener" target="_blank"><img src="https://i.imgur.com/P6fDeZi.png" alt="" loading="lazy"></a></h2>
-</li>
-</ul>
-</blockquote><h1 id="待補充" data-id="待補充"><a class="anchor hidden-xs" href="#待補充" title="待補充"><span class="octicon octicon-link"></span></a><span>待補充</span></h1></div>
+</blockquote><h1 id="python函式庫" data-id="python函式庫"><a class="anchor hidden-xs" href="#python函式庫" title="python函式庫"><span class="octicon octicon-link"></span></a><span>python:函式庫:</span></h1><h2 id="OPENCV_電腦視覺庫" data-id="OPENCV_電腦視覺庫"><a class="anchor hidden-xs" href="#OPENCV_電腦視覺庫" title="OPENCV_電腦視覺庫"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/" target="_blank" rel="noopener"><span>OPENCV_電腦視覺庫:</span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/" target="_blank" rel="noopener"><img src="https://i.imgur.com/inHm6X1.png" alt="" loading="lazy"></a></h2><h2 id="pytube_youtube影片下載用" data-id="pytube_youtube影片下載用"><a class="anchor hidden-xs" href="#pytube_youtube影片下載用" title="pytube_youtube影片下載用"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/" rel="noopener" target="_blank"><span>pytube_youtube影片下載用:</span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/" target="_blank" rel="noopener"><img src="https://i.imgur.com/P6fDeZi.png" alt="" loading="lazy"></a></h2><h2 id="qrcode函式庫無圖標" data-id="qrcode函式庫無圖標"><a class="anchor hidden-xs" href="#qrcode函式庫無圖標" title="qrcode函式庫無圖標"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/qrcode/" rel="noopener" target="_blank"><span>qrcode函式庫:</span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/qrcode/" target="_blank" rel="noopener"><span>無圖標</span></a></h2><h2 id="flask函式庫" data-id="flask函式庫"><a class="anchor hidden-xs" href="#flask函式庫" title="flask函式庫"><span class="octicon octicon-link"></span></a><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/flask/" rel="noopener" target="_blank"><span>flask函式庫:</span></a></h2><p><a href="https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/flask/" target="_blank" rel="noopener"><img src="https://i.imgur.com/oTdn2Ls.png" alt="" loading="lazy"></a></p><h1 id="待補充" data-id="待補充"><a class="anchor hidden-xs" href="#待補充" title="待補充"><span class="octicon octicon-link"></span></a><span>待補充</span></h1></div>
     <div class="ui-toc dropup unselectable hidden-print" style="display:none;">
         <div class="pull-right dropdown">
             <a id="tocLabel" class="ui-toc-label btn btn-default" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" title="Table of content">
@@ -54,8 +42,14 @@
             <ul id="ui-toc" class="ui-toc-dropdown dropdown-menu" aria-labelledby="tocLabel">
                 <div class="toc"><ul class="nav">
 <li><a href="#首頁" title="首頁">首頁</a></li>
-<li><a href="#python函式庫" title="python:函式庫:">python:函式庫:</a></li>
-<li class=""><a href="#待補充" title="待補充">待補充</a></li>
+<li class=""><a href="#python函式庫" title="python:函式庫:">python:函式庫:</a><ul class="nav">
+<li class=""><a href="#OPENCV_電腦視覺庫" title="OPENCV_電腦視覺庫:">OPENCV_電腦視覺庫:</a></li>
+<li><a href="#pytube_youtube影片下載用" title="pytube_youtube影片下載用:">pytube_youtube影片下載用:</a></li>
+<li><a href="#qrcode函式庫無圖標" title="qrcode函式庫:無圖標">qrcode函式庫:無圖標</a></li>
+<li><a href="#flask函式庫" title="flask函式庫:">flask函式庫:</a></li>
+</ul>
+</li>
+<li><a href="#待補充" title="待補充">待補充</a></li>
 </ul>
 </div><div class="toc-menu"><a class="expand-toggle" href="#">全部展開</a><a class="back-to-top" href="#">回到頂部</a><a class="go-to-bottom" href="#">移至底部</a></div>
             </ul>
@@ -63,9 +57,15 @@
     </div>
     <div id="ui-toc-affix" class="ui-affix-toc ui-toc-dropdown unselectable hidden-print" data-spy="affix" style="top:17px;display:none;" null null>
         <div class="toc"><ul class="nav">
-<li><a href="#首頁" title="首頁">首頁</a></li>
-<li><a href="#python函式庫" title="python:函式庫:">python:函式庫:</a></li>
-<li class=""><a href="#待補充" title="待補充">待補充</a></li>
+<li class=""><a href="#首頁" title="首頁">首頁</a></li>
+<li class=""><a href="#python函式庫" title="python:函式庫:">python:函式庫:</a><ul class="nav">
+<li class=""><a href="#OPENCV_電腦視覺庫" title="OPENCV_電腦視覺庫:">OPENCV_電腦視覺庫:</a></li>
+<li><a href="#pytube_youtube影片下載用" title="pytube_youtube影片下載用:">pytube_youtube影片下載用:</a></li>
+<li><a href="#qrcode函式庫無圖標" title="qrcode函式庫:無圖標">qrcode函式庫:無圖標</a></li>
+<li><a href="#flask函式庫" title="flask函式庫:">flask函式庫:</a></li>
+</ul>
+</li>
+<li><a href="#待補充" title="待補充">待補充</a></li>
 </ul>
 </div><div class="toc-menu"><a class="expand-toggle" href="#">全部展開</a><a class="back-to-top" href="#">回到頂部</a><a class="go-to-bottom" href="#">移至底部</a></div>
     </div>
